--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -14,8 +14,7 @@
     <input type="text" class="form-control" id="phoneNumber" placeholder="Phone Number" formControlName='phoneNumber'>
   </div>
   <div class="form-group">
-    <input type="file" id="imageURL" hidden formControlName='imageURL' accept="image/*"
-    (change)="onFileSelected($event)">
+    <input type="file" id="imageURL" hidden formControlName='imageURL' accept="image/*">
     <label for="imageURL" class="btn btn-warning btn-block">Select Image</label>
   </div>
   <div class='d-flex justify-content-between'>
